--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,6 @@
 <resources>
     <string name="app_name">My Application</string>
-<<<<<<< HEAD
-<<<<<<< HEAD
-
     <string name="title_activity_login">Sign in</string>
-
-=======
-    <string name="title_activity_login">Sign in</string>
->>>>>>> 1e535d6d0eb4ffe5e6701d68776938a7b6c204a7
-=======
-    <string name="title_activity_login">Sign in</string>
-=======
-
-
-    <string name="title_activity_login">Sign in</string>
-
->>>>>>> e5ab191e9798d1b2bffccdf6e750b8130373272a
->>>>>>> daac18980c649bbf9ac07d43f42a3e608d7a8a78
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
@@ -25,4 +9,10 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+
+    <string-array name="sports">
+        <item>蔡徐坤</item>
+        <item>鸡你太美</item>
+        <item>打篮球</item>
+    </string-array>
 </resources>
