--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">吐槽词典</string>
 
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
